CostalCloud/force-app/main/default/objects/Labor__c.object
<CustomObject>
    <label>Labor</label>
    <nameField>
        <label>Labor Name/Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>