CostalCloud/force-app/main/default/objects/Labor__c/fields/Amount_Reduced_Total__c.field-meta.xml
<CustomField>
    <fullName>Amount_Reduced_Total__c</fullName>
    <formula>Amount_Reduced_each__c  *  Quantity_to_Reduce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Reduced Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>