CostalCloud/force-app/main/default/objects/Labor__c/fields/Amount_to_Split_each__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Split_each__c</fullName>
    <label>Amount to Split (each)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>