CostalCloud/force-app/main/default/objects/Labor__c/fields/Calc_Basis_Type__c.field-meta.xml
<CustomField>
    <fullName>Calc_Basis_Type__c</fullName>
    <label>Calc Basis Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Miles</fullName>
            </value>
            <value>
                <fullName>Additional Service</fullName>
            </value>
            <value>
                <fullName>Delivery Fee</fullName>
            </value>
            <value>
                <fullName>Parking/ Toll</fullName>
            </value>
            <value>
                <fullName>RRP Fee</fullName>
            </value>
            <value>
                <fullName>Trip Charge</fullName>
            </value>
            <value>
                <fullName>Avera Product</fullName>
            </value>
            <value>
                <fullName>elfa Product</fullName>
            </value>
            <value>
                <fullName>TCS Closets Product</fullName>
            </value>
            <value>
                <fullName>Installer Site Visit</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
            <value>
                <fullName>TCS Closets Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>