CostalCloud/force-app/main/default/objects/Labor__c/fields/Custom_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Item_Number__c</fullName>
    <label>Custom Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>