CostalCloud/force-app/main/default/objects/Labor__c/fields/deliveryLocaationIndicator__c.field-meta.xml
<CustomField>
    <fullName>deliveryLocaationIndicator__c</fullName>
    <label>deliveryLocationIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>