CostalCloud/force-app/main/default/objects/Labor__c/fields/Demo_Haul_Away__c.field-meta.xml
<CustomField>
    <fullName>Demo_Haul_Away__c</fullName>
    <label>Demo/Haul Away</label>
    <length>255</length>
    <type>Text</type>
</CustomField>