CostalCloud/force-app/main/default/objects/Labor__c/fields/duoiCode__c.field-meta.xml
<CustomField>
    <fullName>duoiCode__c</fullName>
    <label>duoiCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>