CostalCloud/force-app/main/default/objects/Labor__c/fields/followupAction__c.field-meta.xml
<CustomField>
    <fullName>followupAction__c</fullName>
    <label>followupAction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>