CostalCloud/force-app/main/default/objects/Labor__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Labor</relationshipLabel>
    <relationshipName>Labor</relationshipName>
    <type>Lookup</type>
</CustomField>