CostalCloud/force-app/main/default/objects/Labor__c/fields/Integration_Key_Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Custom_Product__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key (Custom Product)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>