CostalCloud/force-app/main/default/objects/Labor__c/fields/isActionableForSP__c.field-meta.xml
<CustomField>
    <fullName>isActionableForSP__c</fullName>
    <label>isActionableForSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>