CostalCloud/force-app/main/default/objects/Labor__c/fields/Job_SKU__c.field-meta.xml
<CustomField>
    <fullName>Job_SKU__c</fullName>
    <formula>Work_Order__r.Job_SKU_lookup__r.Job_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job SKU</label>
    <type>Text</type>
</CustomField>