CostalCloud/force-app/main/default/objects/Labor__c/fields/Labor_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Labor_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor ID (18)</label>
    <type>Text</type>
</CustomField>