CostalCloud/force-app/main/default/objects/Labor__c/fields/merchandiseDeliveryIndicator__c.field-meta.xml
<CustomField>
    <fullName>merchandiseDeliveryIndicator__c</fullName>
    <label>merchandiseDeliveryIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>