CostalCloud/force-app/main/default/objects/Labor__c/fields/Moulding__c.field-meta.xml
<CustomField>
    <fullName>Moulding__c</fullName>
    <label>Moulding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>