CostalCloud/force-app/main/default/objects/Labor__c/fields/mVendorName__c.field-meta.xml
<CustomField>
    <fullName>mVendorName__c</fullName>
    <label>mVendorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>