CostalCloud/force-app/main/default/objects/Labor__c/fields/mvendorNumber__c.field-meta.xml
<CustomField>
    <fullName>mvendorNumber__c</fullName>
    <label>mvendorNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>