CostalCloud/force-app/main/default/objects/Labor__c/fields/Notes_Split__c.field-meta.xml
<CustomField>
    <fullName>Notes_Split__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>