CostalCloud/force-app/main/default/objects/Labor__c/fields/Order_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Order_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Invoiced</label>
    <type>Checkbox</type>
</CustomField>