CostalCloud/force-app/main/default/objects/Labor__c/fields/Panels__c.field-meta.xml
<CustomField>
    <fullName>Panels__c</fullName>
    <label>Panels #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>