CostalCloud/force-app/main/default/objects/Labor__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <label>Permit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>