CostalCloud/force-app/main/default/objects/Labor__c/fields/Quantity_to_Split__c.field-meta.xml
<CustomField>
    <fullName>Quantity_to_Split__c</fullName>
    <label>Quantity to Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>