CostalCloud/force-app/main/default/objects/Labor__c/fields/Regular_Cabs__c.field-meta.xml
<CustomField>
    <fullName>Regular_Cabs__c</fullName>
    <label>Regular Cabs #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>