CostalCloud/force-app/main/default/objects/Labor__c/fields/RFI_Grand_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>RFI_Grand_Total_Amount__c</fullName>
    <formula>Work_Order__r.RFI_Amount_Grand_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Grand Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>