CostalCloud/force-app/main/default/objects/Labor__c/fields/Short_SKU_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_SKU_Description__c</fullName>
    <label>Short SKU Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>