CostalCloud/force-app/main/default/objects/Labor__c/fields/SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>SKU_Number__c</fullName>
    <externalId>true</externalId>
    <label>SKU Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>