CostalCloud/force-app/main/default/objects/Labor__c/fields/specialOrderLineNumber__c.field-meta.xml
<CustomField>
    <fullName>specialOrderLineNumber__c</fullName>
    <label>specialOrderLineNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>