CostalCloud/force-app/main/default/objects/Labor__c/fields/suoiDesc__c.field-meta.xml
<CustomField>
    <fullName>suoiDesc__c</fullName>
    <label>suoiDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>