CostalCloud/force-app/main/default/objects/Labor__c/fields/Tall_Cabs__c.field-meta.xml
<CustomField>
    <fullName>Tall_Cabs__c</fullName>
    <label>Tall Cabs #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>