CostalCloud/force-app/main/default/objects/Labor__c/fields/TCS_Amount__c.field-meta.xml
<CustomField>
    <fullName>TCS_Amount__c</fullName>
    <label>RFI  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>