CostalCloud/force-app/main/default/objects/Labor__c/fields/TCS_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>TCS_Amount_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manual override, when checked the TCS amount can be adjusted.</inlineHelpText>
    <label>Amount Override</label>
    <type>Checkbox</type>
</CustomField>