CostalCloud/force-app/main/default/objects/Labor__c/fields/TCS_Order_Verified__c.field-meta.xml
<CustomField>
    <fullName>TCS_Order_Verified__c</fullName>
    <formula>Work_Order__r.TCS_Order_Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCS Order Verified</label>
    <type>Checkbox</type>
</CustomField>