CostalCloud/force-app/main/default/objects/Labor__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field only used for temp updates when mass updating</inlineHelpText>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>