CostalCloud/force-app/main/default/objects/Labor__c/fields/Time_to_Complete_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete_Minutes__c</fullName>
    <label>Time to Complete (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>