CostalCloud/force-app/main/default/objects/Labor__c/fields/Total_Cost_Unit_x_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Unit_x_Quantity__c</fullName>
    <formula>Unit_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (Unit x Quantity)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>