CostalCloud/force-app/main/default/objects/Labor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Labor</fullName>
            </value>
            <value>
                <fullName>Additional Mileage</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Custom Installs</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Optional Installs</fullName>
            </value>
            <value>
                <fullName>Permits</fullName>
            </value>
            <value>
                <fullName>Reduced Labor</fullName>
            </value>
            <value>
                <fullName>Trip Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>