CostalCloud/force-app/main/default/objects/Labor__c/fields/Was_all_labor_for_install_completed__c.field-meta.xml
<CustomField>
    <fullName>Was_all_labor_for_install_completed__c</fullName>
    <label>Was all labor for install completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>