CostalCloud/force-app/main/default/objects/Labor__c/fields/WO_RFI_Amount__c.field-meta.xml
<CustomField>
    <fullName>WO_RFI_Amount__c</fullName>
    <formula>TCS_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO RFI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>