CostalCloud/force-app/main/default/objects/Labor__c/fields/Work_Order_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_ID_18__c</fullName>
    <formula>Work_Order__r.Work_Order_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order ID(18)</label>
    <type>Text</type>
</CustomField>