CostalCloud/force-app/main/default/objects/Labor__c/recordTypes/Integration.recordType-meta.xml
<RecordType>
    <fullName>Integration</fullName>
    <active>true</active>
    <description>This is the default Labor Record Type, anything created by or from Integration.</description>
    <label>Integration</label>
</RecordType>