CostalCloud/force-app/main/default/objects/Labor__c/recordTypes/Integration_TCS.recordType-meta.xml
<RecordType>
    <fullName>Integration_TCS</fullName>
    <active>true</active>
    <label>Integration TCS</label>
</RecordType>