CostalCloud/force-app/main/default/objects/Labor__c/recordTypes/Kitchen_Site_Verification_Bid.recordType-meta.xml
<RecordType>
    <fullName>Kitchen_Site_Verification_Bid</fullName>
    <active>false</active>
    <label>Kitchen Site Verification/Bid</label>
</RecordType>