CostalCloud/force-app/main/default/objects/Labor__c/recordTypes/Labor_Windows.recordType-meta.xml
<RecordType>
    <fullName>Labor_Windows</fullName>
    <active>false</active>
    <label>Labor Windows</label>
</RecordType>