CostalCloud/force-app/main/default/objects/Labor__c/recordTypes/Manual.recordType-meta.xml
<RecordType>
    <fullName>Manual</fullName>
    <active>true</active>
    <description>Used by all users when a labor line has to be manually entered (not coming from integration)</description>
    <label>Manual</label>
</RecordType>